# src/DfE.ExternalApplications.Api/Controllers/TemplatesController.cs
@@ -8,7 +8,6 @@ using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 using Swashbuckle.AspNetCore.Annotations;
 using GovUK.Dfe.CoreLibs.Http.Models;
-using DfE.ExternalApplications.Application.Templates.Models;
 
 namespace DfE.ExternalApplications.Api.Controllers;
 
