# src/DfE.ExternalApplications.Application/Templates/Queries/GetCustomApplicationStatusByApplicationStatusQueryHandler.cs
@@ -1,4 +1,3 @@
-using DfE.ExternalApplications.Application.Templates.Models;
 using DfE.ExternalApplications.Domain.Entities;
 using DfE.ExternalApplications.Domain.Interfaces.Repositories;
 using DfE.ExternalApplications.Domain.ValueObjects;
