# src/GovUK.Dfe.ExternalApplications.Api.Client/Generated/swagger.json
@@ -580,11 +580,14 @@
         ],
         "responses": {
           "200": {
-            "description": "A paged list of applications for the user.",
+            "description": "Applications for the user.",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/PagedResultOfApplicationDto"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ApplicationDto"
+                  }
                 }
               }
             }
@@ -2599,6 +2602,85 @@
         }
       }
     },
+    "/v1/Templates/{templateId}/custom-statuses": {
+      "get": {
+        "tags": [
+          "Templates"
+        ],
+        "summary": "Get custom application statuses for a template.",
+        "operationId": "Templates_GetCustomApplicationStatuses",
+        "parameters": [
+          {
+            "name": "templateId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "guid"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Custom statuses returned.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CustomApplicationStatusDto"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Templates"
+        ],
+        "summary": "Create or update a custom application status for a template.\nIf a CustomApplicationStatus for the TemplateId and ApplicationStatus exists, update its label; otherwise create one.\nReturns the created or updated CustomApplicationStatus.",
+        "operationId": "Templates_CreateCustomApplicationStatus",
+        "parameters": [
+          {
+            "name": "templateId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "guid"
+            },
+            "x-position": 1
+          }
+        ],
+        "requestBody": {
+          "x-name": "request",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CustomApplicationStatusDto"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 2
+        },
+        "responses": {
+          "201": {
+            "description": "Custom status created/updated.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CustomApplicationStatusDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/v1/Templates/{templateId}/versions": {
       "post": {
         "tags": [
@@ -2860,8 +2942,8 @@
               }
             }
           },
-          "404": {
-            "description": "User not found.",
+          "403": {
+            "description": "Forbidden - user does not have required permissions",
             "content": {
               "application/json": {
                 "schema": {
@@ -3733,6 +3815,36 @@
             "type": "string",
             "format": "guid",
             "nullable": true
+          }
+        }
+      },
+      "CustomApplicationStatusDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "customApplicationStatusId": {
+            "type": "string",
+            "format": "guid",
+            "nullable": true
+          },
+          "templateId": {
+            "type": "string",
+            "format": "guid"
+          },
+          "applicationStatus": {
+            "$ref": "#/components/schemas/ApplicationStatus"
+          },
+          "label": {
+            "type": "string",
+            "nullable": true
+          },
+          "createdOn": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "CreatedBy": {
+            "type": "string",
+            "format": "guid"
           }
         }
       },
